[tool.poetry]
name = "api_extended"
version = "0.0.2"
description = ""
authors = ["WardPearce <wardpearce@pm.me>"]
readme = "README.md"
packages = [
    {include = "*", from = "api_extended"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["full"], version = "^2.17.0"}
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.25.1"}
sqlalchemy = "^2.0.42"
uvicorn = "^0.35.0"
aiohttp = "^3.12.15"
aiocron = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
