[tool.poetry]
name = "api_extended"
version = "0.0.2"
description = ""
authors = ["WardPearce <wardpearce@pm.me>"]
readme = "README.md"
packages = [
    {include = "*", from = "api_extended"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["full"], version = "^2.17.0"}
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.25.1"}
sqlalchemy = "^2.0.42"
uvicorn = "^0.36.0"
aiohttp = "^3.13.0"
aiocron = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
